<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/grid_24"
    android:background="@drawable/bg_profile_content">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/grid_24"
        android:background="@color/divider" />

    <TextView
        style="@style/TextAppearance.PortalNexus.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nexus_filters" />

    <TextView
        style="@style/TextAppearance.PortalNexus.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_24"
        android:text="@string/status" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/bsChipGroupStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_8"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipStatusAll"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipAlive"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alive" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipDead"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dead" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        style="@style/TextAppearance.PortalNexus.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_16"
        android:text="@string/gender" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/bsChipGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_8"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipGenderAll"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipMale"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipFemale"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        style="@style/TextAppearance.PortalNexus.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_16"
        android:text="@string/species" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/bsChipGroupSpecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_8"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipSpeciesAll"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species_all" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipHuman"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human" />

        <com.google.android.material.chip.Chip
            android:id="@+id/bsChipAlien"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alien" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApplyFilters"
        style="@style/Widget.PortalNexus.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_32"
        android:text="@string/apply_filters" />

</LinearLayout>
